Disabling GN modifier in viewport does not disable viewer nodes anymore #120970

Closed
opened 2024-04-23 11:38:16 +02:00 by Philipp Oeser · 1 comment
Member

System Information
Operating system: Linux-6.8.6-200.fc39.x86_64-x86_64-with-glibc2.38 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 550.67

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-21 15:39, hash: 1d9d0f0056f3
Broken: 4.0
Worked: 3.6 LTS

Caused by 98d675ac6c

Short description of error
Disabling GN modifier in viewport does not disable viewer nodes anymore.
Since the viewer node has its own bugs (e.g. #101443), this can be a bit annoying, behavior in 3.6 was preferred

Exact steps for others to reproduce the error

  • open .blend in 3.6
  • enable the viewer node if necessary
    image
  • disable Realtime / Display modifier in viewport
    image
  • Viewer node gets auto disabled (good)
  • repeat steps in 4.0
  • Viewer node is still active
**System Information** Operating system: Linux-6.8.6-200.fc39.x86_64-x86_64-with-glibc2.38 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 550.67 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-21 15:39, hash: `1d9d0f0056f3` Broken: 4.0 Worked: 3.6 LTS Caused by 98d675ac6c **Short description of error** Disabling GN modifier in viewport does not disable viewer nodes anymore. Since the viewer node has its own bugs (e.g. #101443), this can be a bit annoying, behavior in 3.6 was preferred **Exact steps for others to reproduce the error** - open .blend in 3.6 - enable the viewer node if necessary ![image](/attachments/d28786af-4559-4205-a68c-82580e3c9cf2) - disable `Realtime` / `Display modifier in viewport` ![image](/attachments/7bd4e16c-df13-490f-ba53-20dd84c2173c) - Viewer node gets auto disabled (good) - repeat steps in 4.0 - Viewer node is still active
Philipp Oeser added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2024-04-23 11:38:17 +02:00
Author
Member
CC @JacquesLucke
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-23 12:44:15 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120970
No description provided.