Fix #120970: viewer geometry still visible even if modifier is disabled